--- a/components/footer.html
+++ b/components/footer.html
@@ -40,7 +40,7 @@
     
     <!-- Ligne 4 : Copyright minimaliste -->
     <div class="text-center text-xs text-gray-400">
-      © 2025-2026 Ludus Mentis ASBL (en création) • 
+      2025-2026 Ludus Mentis® ASBL • 
       <button onclick="if(typeof tarteaucitron !== 'undefined') tarteaucitron.userInterface.openPanel();" 
               class="underline hover:text-gray-600">
         Gérer les cookies
