Add Journal link to footer
Added a link to the Journal page in the footer.

--- a/components/footer.html
+++ b/components/footer.html
@@ -9,6 +9,8 @@
       <span class="text-gray-300">•</span>
       <a href="/infos-pratiques.html" class="hover:text-ludus-teal">Infos & Tarifs</a>
       <span class="text-gray-300">•</span>
+      <a href="/journal.html" class="hover:text-ludus-teal">Journal</a>
+      <span class="text-gray-300">•</span>
       <a href="/contact.html" class="hover:text-ludus-teal">Contact</a>
       <span class="text-gray-300">•</span>
       <a href="/mentions.html" class="hover:text-ludus-teal">Mentions légales</a>
